# monorepo_independent_releases

./: .release-please-manifest.json  README.md  release-please-config.json
.github/config/: commitlint.config.js  markdown-lint.config  yaml-lint-config.yml
.github/scripts/: install-agent-tools.sh
.github/workflows/: deploy_a.yml  deploy_b.yml  docker.yml  pr_a.yml  pr_b.yml  python_style.yml  release.yaml  style.yml  tests.yml
.github/workflows/a/: deploy_a.yml  pr_a.yml
.github/workflows/b/: deploy_b.yml  pr_b.yml
model/a/: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
model/a/src/a/: main.py
model/b/: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
model/b/src/b/: main.py
