[tool.poetry]
name = 'a'
version = "0.1.0"
description = "model a"
authors = ["Mita Winata"]

[tool.poetry.dependencies]
python = ">=3.9.10, <3.11.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
pytest = "^7.3.1"
openpyxl = "^3.1.2"
debugpy = "^1.8.0"
ruff = "^0.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
a = "a.main:main"
